docs: add swagger annotations for create new advert endpoint
