# internal/handlers/handler_ad_create.go
@@ -30,6 +30,18 @@ const (
 	maxImageSize   = 10 * 1024 * 1024
 )
 
+// HandlerCreateAd godoc
+// @Summary     Создать новое объявление
+// @Description Создаёт новое объявление с заданными параметрами
+// @Accept      json
+// @Produce     json
+// @Security    BearerAuth
+// @Param       body body     dto.AdvertisementRequest  true "Параметры объявления"
+// @Success     201  {object} dto.AdvertisementResponse "Успешное создание объявления"
+// @Failure     400  {object} dto.ErrorResponse         "Неверный формат запроса"
+// @Failure     401  {object} dto.ErrorResponse         "Невалидный или просроченный токен-доступа"
+// @Failure     500  {object} dto.ErrorResponse         "Внутренняя ошибка сервера"
+// @Router      /api/ads [post]
 func (cfg *ApiConfig) HandlerCreateAd(c *gin.Context) {
 	token, err := auth.GetBearerToken(c)
 	if err != nil {
